new file:   .vscode/extensions.json 	modified:   WebApp/__pycache__/app.cpython-310.pyc 	modified:   WebApp/__pycache__/helpers.cpython-310.pyc 	modified:   WebApp/app.py 	new file:   WebApp/flask_session/9bacfcbc53afbb7d3b8eb44f005ab058 	deleted:    WebApp/flask_session/f7a81a3ebd307b9320c26904a8cf6fcb 	modified:   WebApp/helpers.py 	new file:   WebApp/mqtt.db 	new file:   WebApp/templates/AddPub.html 	new file:   WebApp/templates/AddSub.html 	deleted:    WebApp/templates/addcash.html 	deleted:    WebApp/templates/buy.html 	deleted:    WebApp/templates/history.html 	modified:   WebApp/templates/index.html 	modified:   WebApp/templates/layout.html 	new file:   WebApp/templates/log.html 	deleted:    WebApp/templates/quote.html 	deleted:    WebApp/templates/sell.html 	new file:   mqttTesting/mqttP2.py 	new file:   mqttTesting/mqttPublish.py 	new file:   mqttTesting/mqttSubscription.py

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Portfolio
+    DashBoard
 {% endblock %}
 
 {% block main %}
-    <h2>Portfolio</h2>
+    <h2>DashBoard</h2>
 
     <table class="table table-bordered table-striped">
         <thead class="thread-light">
@@ -24,19 +24,19 @@
                     <th>{{ stock.symbol }}</td>
                     <th>{{ stock.name }}</td>
                     <th>{{ stock.total_shares }}</td>
-                    <th>{{ stock.price | usd }}</td>
-                    <th>{{ (stock.price * stock.total_shares) | usd  }}</td>
+                    <th>{{ stock.price }}</td>
+                    <th>{{ (stock.price * stock.total_shares) }}</td>
                 </tr>
             {% endfor %}
 
             <tr>
                 <td colspan="4" align="right">Cash</td>
-                <td>{{ cash | usd }}</td>
+                <td>{{ cash }}</td>
             </tr>
 
             <tr>
                 <td colspan="4" align="right">Total Value</td>
-                <td>{{ total_value | usd }}</td>
+                <td>{{ total_value  }}</td>
             </tr>
         </tbody>
     </table>
