--- a/WebApp/templates/layout.html
+++ b/WebApp/templates/layout.html
@@ -31,11 +31,9 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/quote">Quote</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/addcash">AddCash</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/AddSub">AddSub</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/addPub">AddPub</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/log">Log</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
