--- a/WebApp/templates/layout.html
+++ b/WebApp/templates/layout.html
@@ -16,7 +16,7 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
-        <title>C$50 Finance: {% block title %}{% endblock %}</title>
+        <title>MQTT Dashboard: {% block title %}{% endblock %}</title>
 
     </head>
 
@@ -32,8 +32,9 @@
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/AddSub">AddSub</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/addPub">AddPub</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/AddPub">AddPub</a></li>
                             <li class="nav-item"><a class="nav-link" href="/log">Log</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/EditBroker">EditBroker</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
