--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -21,7 +21,7 @@
         <tbody>
             {% for sub in subLog %}
                 <tr>
-                    <td>{{ userPath[0]["path"] }}/{{ sub.topic }}</td>
+                    <td>{{ sub.topic }}</td>
                     <td>{{ sub.value }}</td>
                     <td>{{ sub.timestamp }}</td>
                 </tr>
