--- a/WebApp/templates/layout.html
+++ b/WebApp/templates/layout.html
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">C</span><span class="red">$</span><span class="yellow">5</span><span class="green">0</span> <span class="red">MQTT DashBoard</span></a>
+                <a class="navbar-brand" href="/"><span class="blue">C</span><span class="red">S</span><span class="yellow">5</span><span class="green">0</span> <span class="red">MQTT DashBoard</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +34,7 @@
                             <li class="nav-item"><a class="nav-link" href="/AddSub">Subscribtions</a></li>
                             <li class="nav-item"><a class="nav-link" href="/AddPub">Publishs</a></li>
                             <li class="nav-item"><a class="nav-link" href="/log">Log</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/EditBroker">Broker</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/ShowBroker">Broker</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
