--- a/WebApp/templates/layout.html
+++ b/WebApp/templates/layout.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/AddSub">Subscribtions</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/AddSub">Subscriptions</a></li>
                             <li class="nav-item"><a class="nav-link" href="/AddPub">Publishs</a></li>
                             <li class="nav-item"><a class="nav-link" href="/log">Log</a></li>
                             <li class="nav-item"><a class="nav-link" href="/ShowBroker">Broker</a></li>
